--- a/app/components/about/about.html
+++ b/app/components/about/about.html
@@ -30,7 +30,13 @@
 
   <!-- Timeline -->
 
-  <row id="experience">
+  <row id="experience" class="carbon light">
+    <div class="header">
+      <h2>Where I've Been</h2>
+    </div>
+
+    <divider></divider>
+
     <timeline target="experiences"></timeline>
   </row>
 
