--- a/app/components/footer/footer.html
+++ b/app/components/footer/footer.html
@@ -1,5 +1,5 @@
 <div  id="footer-content" ng-controller="FooterCtrl" ng-hide="blacklisted">
-  <div class="sprite-row">
+  <center class="sprite-row">
     <sprite href="{{sprite.href}}" name="{{sprite.name}}" ng-repeat="sprite in sprites"></sprite>
-  </div>
+  </center>
 </div>
