--- a/app/components/home/home.scss
+++ b/app/components/home/home.scss
@@ -59,7 +59,7 @@
           padding: 10px;
           width: 120px;
           border: 1px solid $light-grey;
-          transition: 0.25s ease-in-out all;
+          transition: $ease;
 
           &:hover {
             background: white;
