--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -10,7 +10,6 @@ html, body {
   padding: 0;
   margin: 0;
   background :none;
-  min-width: 320px;
   width: 100%;
   height: 100%;
 
@@ -33,7 +32,7 @@ h1, h2, h3, h4 {
   font-weight: 300;
 }
 
-a {
+a, .sprite {
   cursor: pointer;
 
   &:hover {
@@ -49,10 +48,6 @@ img {
 #main-content {
   width: 100%;
   min-height:100%;
-}
-
-.navbar {
-  min-width: 320px;
 }
 
 #background-filter {
@@ -200,12 +195,22 @@ ul {
 
 
 .button {
-  border: 1px solid $blue;
-  color: white;
+  color: $light-grey;
+  font-size: 15px;
+  display: inline-block;
+  padding: 10px;
+  width: 120px;
+  border: 1px solid $light-grey;
+  transition: 0.25s ease-in-out all;
+  font-weight:200;
+  font-size: 1rem;
+  text-transform: uppercase;
 
   &:hover {
     cursor: pointer;
     text-decoration: none;
+    background: white;
+    color: $charcoal-grey
   }
 
   &[type="submit"], &[active="true"] {
