--- a/app/components/footer/footer.scss
+++ b/app/components/footer/footer.scss
@@ -11,6 +11,18 @@ $sprite-height: 40px;
   position: relative;
   border-top: 1px solid $grey;
 
+  &.light {
+    color: $dark-grey;
+
+    .sprite-row .sprite {
+      color: $dark-grey;
+
+      &:hover {
+        color: $blue;
+      }
+    }
+  }
+
   .sprite-row {
     width: 500px;
     margin: auto;
