--- a/app/components/footer/footer.html
+++ b/app/components/footer/footer.html
@@ -2,4 +2,7 @@
   <center class="sprite-row">
     <sprite href="{{sprite.href}}" name="{{sprite.name}}" ng-repeat="sprite in sprites"></sprite>
   </center>
+  <p>
+    <a href="{{siteSrc.href}}">{{siteSrc.text}}</a>
+  </p>
 </div>
