more footer cleanup. fixed error page styling

--- a/app/components/footer/footer.html
+++ b/app/components/footer/footer.html
@@ -3,6 +3,6 @@
     <sprite href="{{sprite.href}}" name="{{sprite.name}}" ng-repeat="sprite in sprites"></sprite>
   </center>
   <p>
-    <a href="{{siteSrc.href}}">{{siteSrc.text}}</a>
+    <a ng-click="newTab(siteSrc.href)">{{siteSrc.text}}</a>
   </p>
 </div>
