--- a/app/components/header/header.html
+++ b/app/components/header/header.html
@@ -11,15 +11,33 @@
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
+
         <li><a href="#/">Home</a></li>
+
         <li><a href="#about">About</a></li>
+
         <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> ipsum <span class="caret"></span></a>
+          <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+            Projects
+            <sprite name="ion-chevron-up" class="closed" size="16"></sprite>
+            <sprite name="ion-chevron-down" class="open" size="16"></sprite>
+          </a>
+
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#stats/team">aaaa</a></li>
-            <li><a href="#stats/league">bbbb</a></li>
-            <li><a href="#stats/user">cccc</a></li>
+            <li>
+              <a ng-click="newTab('https://github.com/johnhof/IceBuddy')">IceBuddy </a>
+            </li>
+            <li>
+                <a href="#mongoman">Mongoman</a>
+            </li>
+            <li>
+              <a ng-click="newTab('https://github.com/johnhof/ApiTester')">ApiTester</a>
+            </li>
+            <li>
+              <a ng-click="newTab('https://github.com/johnhof/JiraJockey')">JiraJockey</a>
+            </li>
           </ul>
+
         </li>
         <li><a href="#contact">Contact</a></li>
       </ul>
