mongo page layout

--- a/app/components/header/header.html
+++ b/app/components/header/header.html
@@ -28,7 +28,7 @@
               <a ng-click="newTab('https://github.com/johnhof/IceBuddy')">IceBuddy </a>
             </li>
             <li>
-                <a href="#mongoman">Mongoman</a>
+                <a href="#/mongoman">Mongoman</a>
             </li>
             <li>
               <a ng-click="newTab('https://github.com/johnhof/ApiTester')">ApiTester</a>
