--- a/app/components/mongoman/mongoman.scss
+++ b/app/components/mongoman/mongoman.scss
@@ -8,35 +8,106 @@
   color: $charcoal-grey;
 
   section {
-    padding: 20px 20px;
+    padding: 20px 40px;
 
-    &.banner {
+    &#banner {
       color: white;
       background: $blue;
-      padding-top: 20px;
-      padding-bottom: 30px;
+      padding-top: 40px;
+      padding-bottom: 50px;
+      display: inline-block;
+      position: relative;
 
       h1 {
-        padding-bottom: 15px;
+        padding-bottom: 25px;
         font-size: 3.5rem;
         font-weight: 500;
+      }
+
+      // micro-mobile
+      @media (max-width: 400px) {
+        h2 {
+          font-size: 1.2rem;
+        }
+      }
+    }
+
+    // med-mobile
+    @media (max-width: 560px) {
+      padding: 15px 15px;
+
+      &#banner {
+        padding: 15px 15px 25px;
+
+        h1 {
+          font-size: 3rem;
+        }
+      }
+
+      h2 {
+        font-size: 1.5rem;
       }
     }
 
     h3 {
       font-weight: 400;
+      margin-bottom: 15px;
+      margin-top: 0;
     }
 
     p {
-      margin: 15px 0 0;
+      margin: 30px 0 0;
+      font-size: 1.1rem;
+
+      a {
+        color: $blue;
+        font-weight: 400;
+        transition: $ease;
+      }
+    }
+
+    &#getting-started {
+      padding-top: 40px;
+    }
+
+    &#fork {
+      p {
+        margin: 20px 0;
+        text-align: center;
+
+        font-size: 1.5rem;
+
+        a {
+          font-weight: 600;
+          padding: 10px;
+          color: $charcoal-grey;
+
+          &:hover {
+            background: $blue;
+            color: white;
+          }
+
+          .sprite {
+            transition: none;
+
+            &:hover {
+              color: inherit;
+            }
+          }
+        }
+      }
     }
   }
+
 
   // desktop
   @media (min-width: 768px) {
   }
 
-  // desktop
-  @media (min-width: 1000px) {
+  // mobile
+  @media (max-width: 768px) {
+    width: auto;
+    height: 100%;
+    margin: 1px 10px 0;
   }
 }
