--- a/app/components/mongoman/documentation/mongo_documentation.html
+++ b/app/components/mongoman/documentation/mongo_documentation.html
@@ -1,22 +1,3 @@
 <div id="mongoman-content">
-  <div id="key">
-    key
-    <ul>
-      <li><a href="">test1</a></li>
-      <li><a href="">test2</a></li>
-      <li><a href="">test3</a></li>
-    </ul>
-  </div>
-
-  <div id="documentation">
-    <section>
-      testing1
-    </section>
-    <section>
-      testing2
-    </section>
-    <section>
-      testing3
-    </section>
-  </div>
+  <div class="markdown documentation" ng-bind-html="documentation"></div>
 </div>
