--- a/app/components/about/about.html
+++ b/app/components/about/about.html
@@ -6,7 +6,7 @@
     <center class="col-sm-12 text-container">
         <p>
           <span>Hello!</span>
-          I am a full stack web developer hailing from the University of Pittsburgh. I started studying computer science because I had to study something. I fell in love and never looked back. I've touched everything from Assembly to Stylus and found that the web is the most exciting place to be. Programming has turned from a job, into my favorite hobby.
+          I am a full stack web developer hailing from the University of Pittsburgh. I started studying computer science because I had to study something. I fell in love and never looked back. I've touched everything from Assembly to Stylus. Programming has turned from a job, into my favorite hobby.
         </p>
     </center>
   </row>
