--- a/app/components/about/partials/fun_facts/_fun_facts.html
+++ b/app/components/about/partials/fun_facts/_fun_facts.html
@@ -5,7 +5,7 @@
   </ul>
 </div>
 <div class="col-sm-6 block">
-  <div class="lead">Things I Dont</div>
+  <div class="lead">Things I Don't</div>
   <ul class="custom">
     <li ng-repeat="dislike in dislikes">{{dislike}}</li>
   </ul>
