--- a/app/components/mongoman/documentation/mongo_documentation.scss
+++ b/app/components/mongoman/documentation/mongo_documentation.scss
@@ -1,48 +1,101 @@
+@import 'variables';
+
 #mongoman-documentation-content {
-  position: absolute;
-  width: 100%;
   height: 100%;
 
-
-  #key {
-    height:100%;
-    overflow-y: scroll;
-    background: white;
+  a {
+    color: $blue;
+    font-weight: 400;
+    transition: $ease;
   }
 
-  #documentation {
-    height:100%;
-    background: white;
+
+  .documentation {
+    height: 100%;
+    display: block;
+    color: $charcoal-grey;
+
+    > * {
+      position: absolute;
+      height: 100%;
+      overflow-y: scroll;
+      overflow-x: hidden;
+      background-color: white;
+    }
+
+
+    .markdown-key {
+      padding: 10px;
+      width: 280px;
+
+      a {
+        color: $charcoal-grey;
+        display: block;
+        font-size: 1.2rem;
+        font-weight: 400;
+        margin-top: 10px;
+        margin-bottom: 5px;
+
+        &:hover {
+          color: $blue;
+        }
+
+        &.function {
+          font-size: 1rem;
+          margin: 0;
+
+          code {
+            font-size: inherit;
+            background: none;
+            border-radius: 0;
+            padding: 0;
+            color: $grey;
+            font-weight: 100;
+            border-bottom: 1px solid $light-grey;
+            line-height: 1.8rem;
+            transition: $ease;
+
+            &:hover {
+              color: $blue;
+              border-bottom: 1px solid $blue;
+            }
+
+            span {
+              color: $blue;
+            }
+          }
+        }
+      }
+
+      ul {
+        padding-left: 15px;
+
+        li {
+          list-style-type: none;
+
+          ul {
+            border-left: 1px solid whitesmoke;
+          }
+        }
+      }
+    }
+
+    .markdown-content {
+      padding: 10px;
+      margin-left: 280px;
+
+      h3 {
+        width: 100%;
+        margin: 20px 0 0;
+
+      }
+    }
+
 
     // mobile
     @media (max-width: 768px) {
-      position: absolute;
+      width: auto;
+      height: 100%;
     }
-  }
-
-  ul {
-    li {
-      list-style-type: none;
-    }
-  }
-
-  // desktop
-  @media (min-width: 768px) {
-    padding: 10px 1%;
-
-    #key {
-      float: left;
-      width: 30%;
-    }
-
-    #documentation {
-      float: right;
-      width: 70%;
-    }
-  }
-
-  // desktop
-  @media (min-width: 1000px) {
-    padding: 10px 5%;
   }
 }
