--- a/app/components/mongoman/mongoman.html
+++ b/app/components/mongoman/mongoman.html
@@ -21,7 +21,7 @@
       Any time you want access to Monoman, just require it above your mongodb usage.
     </p>
     <pre class="prettyprint  lang-js"><code class="language-js"><!--
-    -->var mongoman = require('mongoman');<!--
+    -->var mon = require('mongoman');<!--
     --></code></pre>
     <p>
       Ready to go? <a href="#/mongoman/documentation">Check out the documentation</a>
@@ -39,7 +39,31 @@
     </p>
 
     <pre class="prettyprint  lang-js"><code class="language-js">
-    // some bloated code
+      var mongoose = require('mongoose');
+
+      var newSchema = new mongoose.Schema({
+        email : {
+          type       : String,
+          required   : true,
+          validation : [{
+            msg       : 'invalid email',
+            validator : function (value) {
+              return /^([a-zA-Z0-9_\-\.]+)@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([a-zA-Z0-9\-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)$/.test(value);
+            }
+          }]
+        password : {
+          type       : String,
+          required   : true,
+          validation : [{
+            msg       : 'too short',
+            validator : function (value) {
+              return value.length >= 6
+            }
+          }]
+        }
+      });
+
+      mongoose.model('ExampleModel', newSchema);
     </code></pre>
 
     <p>
@@ -47,15 +71,19 @@
     </p>
 
     <pre class="prettyprint  lang-js"><code class="language-js">
-    var mongoman = require('mongoman');
-    // some non bloated code
+       var mon = require('mongoman');
+
+      mon.register('ExampleModel', {
+        email    : mon().string().required().email().fin(),
+        password : mon().string().required().min(6).fin()
+      });
     </code></pre>
 
   </section>
   <section id="more-info">
     <h3>More information</h3>
     <p>
-      Mongoman is currently being usedin developement with a hockey stat tracking application <a href="https://github.com/johnhof/IceBuddy" target="_blank">IceBuddy</a>. Since this is not live yet, Icebuddy has not been tested under production load. since models are created on server startup, it should function equally well in production as development
+      Mongoman is currently being used in developement with a hockey stat tracking application <a href="https://github.com/johnhof/IceBuddy" target="_blank">IceBuddy</a>, and the API for this site. Since this is not live yet, Icebuddy has not been tested under production load. since models are created on server startup, it should function equally well in production as development
     </p>
   </section>
 
