--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -262,6 +262,10 @@ ul {
     }
   }
 
+  h2 {
+    margin: 20px 0 10px;
+  }
+
   code {
     border-radius: 0;
   }
@@ -277,30 +281,96 @@ ul {
     }
   }
 
-  .doc-title {
-    margin: 0;
-    margin-top: 20px;
-    padding: 10px 5px;
-    color: white;
-    background-color: $blue;
-    border-top: 1px solid $light-grey;
-    border-left: 1px solid $light-grey;
-    border-right: 1px solid $light-grey;
+  .markdown-key {
+    padding: 10px;
+    width: 280px;
 
-    code {
-      background-color: inherit;
-      color: inherit;
-      padding: 10px 0;
+    a {
+      color: $charcoal-grey;
       display: block;
+      font-size: 1.2rem;
+      font-weight: 400;
+      margin-top: 10px;
+      margin-bottom: 5px;
+
+      &:hover {
+        color: $blue;
+      }
+
+      &.function {
+        font-size: 1rem;
+        margin: 0;
+
+        code {
+          font-size: inherit;
+          background: none;
+          border-radius: 0;
+          padding: 0;
+          color: $grey;
+          font-weight: 100;
+          border-bottom: 1px solid $light-grey;
+          line-height: 1.8rem;
+          transition: $ease;
+
+          &:hover {
+            color: $blue;
+            border-bottom: 1px solid $blue;
+          }
+
+          span {
+            color: $blue;
+          }
+        }
+      }
+    }
+
+    ul {
+      padding-left: 15px;
+
+      li {
+        list-style-type: none;
+      }
     }
   }
-  .doc-description {
-    margin: 0;
-    padding: 15px 5px;
-    border-left: 1px solid $light-grey;
-    border-right: 1px solid $light-grey;
-  }
-  .doc-code {
+
+  .doc-function {
+    border: 1px solid $light-grey;
+    margin-top: 20px;
+
+    h3 {
+      width: 100%;
+      color: white;
+      background-color: $blue;
+      padding: 10px;
+      font-size: 1rem;
+      margin: 0;
+
+      code {
+        background-color: inherit;
+        color: inherit;
+        padding: 0;
+        display: block;
+        font-size: 1.2rem;
+      }
+    }
+
+    p {
+      margin: 0;
+      padding: 10px;
+      font-size: 1rem;
+
+      &:first-of-type {
+        padding-top: 20px;
+      }
+      &:last-of-type {
+        padding-bottom: 20px;
+      }
+    }
+
+    pre {
+      margin: 0;
+      border: none;
+    }
   }
 }
 
