--- a/app/assets/styles/pretify.scss
+++ b/app/assets/styles/pretify.scss
@@ -101,79 +101,226 @@ li {
 // susnburst
 //
 
-pre .str, code .str {
-  color: #65B042;
-}
+// pre .str, code .str {
+//   color: #65B042;
+// }
 
-/* string  - green */
+// /* string  - green */
 
-pre .kwd, code .kwd {
-  color: #E28964;
-}
+// pre .kwd, code .kwd {
+//   color: #E28964;
+// }
 
-/* keyword - dark pink */
+// /* keyword - dark pink */
 
-pre .com, code .com {
-  color: #AEAEAE;
-  font-style: italic;
-}
+// pre .com, code .com {
+//   color: #AEAEAE;
+//   font-style: italic;
+// }
 
-/* comment - gray */
+// /* comment - gray */
 
-pre .typ, code .typ {
-  color: #89bdff;
-}
+// pre .typ, code .typ {
+//   color: #89bdff;
+// }
 
-/* type - light blue */
+// /* type - light blue */
 
-pre .lit, code .lit {
-  color: #3387CC;
-}
+// pre .lit, code .lit {
+//   color: #3387CC;
+// }
 
-/* literal - blue */
+// /* literal - blue */
 
-pre .pun, code .pun, pre .pln, code .pln {
-  color: #fff;
-}
+// pre .pun, code .pun, pre .pln, code .pln {
+//   color: #fff;
+// }
 
-/* punctuation - white */
-/* plaintext - white */
+// /* punctuation - white */
+// /* plaintext - white */
 
-pre .tag, code .tag {
-  color: #89bdff;
-}
+// pre .tag, code .tag {
+//   color: #89bdff;
+// }
 
-/* html/xml tag    - light blue */
+// /* html/xml tag    - light blue */
 
-pre .atn, code .atn {
-  color: #bdb76b;
-}
+// pre .atn, code .atn {
+//   color: #bdb76b;
+// }
 
-/* html/xml attribute name  - khaki */
+// /* html/xml attribute name  - khaki */
 
-pre .atv, code .atv {
-  color: #65B042;
-}
+// pre .atv, code .atv {
+//   color: #65B042;
+// }
 
-/* html/xml attribute value - green */
+// /* html/xml attribute value - green */
 
-pre .dec, code .dec {
-  color: #3387CC;
-}
+// pre .dec, code .dec {
+//   color: #3387CC;
+// }
 
-/* decimal - blue */
+// /* decimal - blue */
 
-pre.prettyprint, code.prettyprint {
-  background-color: #000;
-}
+// pre.prettyprint, code.prettyprint {
+//   background-color: #000;
+// }
+
+// pre.prettyprint {
+//   white-space: pre-wrap;
+//   width: 100%;
+//   padding: 10px;
+//   margin: 20px 0;
+//   border: 1px solid #888;
+//   border-radius: 0;
+// }
+
+// /* Specify class=linenums on a pre to get line numbering */
+
+// ol.linenums {
+//   margin-top: 0;
+//   margin-bottom: 0;
+//   color: #AEAEAE;
+// }
+
+// /* IE indents via margin-left */
+
+// li {
+//   &.L0, &.L1, &.L2, &.L3, &.L5, &.L6, &.L7, &.L8 {
+//     list-style-type: none;
+//   }
+//   &.L1, &.L3, &.L5, &.L7, &.L9 {}
+// }
+
+// /* Alternate shading for lines */
+
+// @media print {
+//   pre .str, code .str {
+//     color: #060;
+//   }
+//   pre .kwd, code .kwd {
+//     color: #006;
+//     font-weight: bold;
+//   }
+//   pre .com, code .com {
+//     color: #600;
+//     font-style: italic;
+//   }
+//   pre .typ, code .typ {
+//     color: #404;
+//     font-weight: bold;
+//   }
+//   pre .lit, code .lit {
+//     color: #044;
+//   }
+//   pre .pun, code .pun {
+//     color: #440;
+//   }
+//   pre .pln, code .pln {
+//     color: #000;
+//   }
+//   pre .tag, code .tag {
+//     color: #006;
+//     font-weight: bold;
+//   }
+//   pre .atn, code .atn {
+//     color: #404;
+//   }
+//   pre .atv, code .atv {
+//     color: #060;
+//   }
+// }
+
+
+
+
+/* Tomorrow Night Theme */
 
 pre.prettyprint {
-  white-space: pre-wrap;
-  width: 100%;
+  background: #1d1f21;
+  font-family: Menlo, 'Bitstream Vera Sans Mono', 'DejaVu Sans Mono', Monaco, Consolas, monospace;
+  font-size: 12px;
+  line-height: 1.5;
+  border: 1px solid #ccc;
   padding: 10px;
-  margin: 20px 0;
-  border: 1px solid #888;
-  border-radius: 0;
+}
+
+.pln {
+  color: #c5c8c6;
+}
+
+@media screen {
+  .str {
+    color: #b5bd68;
+  }
+  .kwd {
+    color: #b294bb;
+  }
+  .com {
+    color: #969896;
+  }
+  .typ {
+    color: #81a2be;
+  }
+  .lit {
+    color: #de935f;
+  }
+  .pun, .opn, .clo {
+    color: #c5c8c6;
+  }
+  .tag {
+    color: #cc6666;
+  }
+  .atn {
+    color: #de935f;
+  }
+  .atv {
+    color: #8abeb7;
+  }
+  .dec {
+    color: #de935f;
+  }
+  .var {
+    color: #cc6666;
+  }
+  .fun {
+    color: #81a2be;
+  }
+}
+
+@media print, projection {
+  .str {
+    color: #006600;
+  }
+  .kwd {
+    color: #006;
+    font-weight: bold;
+  }
+  .com {
+    color: #600;
+    font-style: italic;
+  }
+  .typ {
+    color: #404;
+    font-weight: bold;
+  }
+  .lit {
+    color: #004444;
+  }
+  .pun, .opn, .clo {
+    color: #444400;
+  }
+  .tag {
+    color: #006;
+    font-weight: bold;
+  }
+  .atn {
+    color: #440044;
+  }
+  .atv {
+    color: #006600;
+  }
 }
 
 /* Specify class=linenums on a pre to get line numbering */
@@ -181,53 +328,14 @@ pre.prettyprint {
 ol.linenums {
   margin-top: 0;
   margin-bottom: 0;
-  color: #AEAEAE;
 }
 
 /* IE indents via margin-left */
 
 li {
-  &.L0, &.L1, &.L2, &.L3, &.L5, &.L6, &.L7, &.L8 {
-    list-style-type: none;
+  &.L0, &.L1, &.L2, &.L3, &.L4, &.L5, &.L6, &.L7, &.L8, &.L9, &.L1, &.L3, &.L5, &.L7, &.L9 {
+    /* */
   }
-  &.L1, &.L3, &.L5, &.L7, &.L9 {}
 }
 
 /* Alternate shading for lines */
-
-@media print {
-  pre .str, code .str {
-    color: #060;
-  }
-  pre .kwd, code .kwd {
-    color: #006;
-    font-weight: bold;
-  }
-  pre .com, code .com {
-    color: #600;
-    font-style: italic;
-  }
-  pre .typ, code .typ {
-    color: #404;
-    font-weight: bold;
-  }
-  pre .lit, code .lit {
-    color: #044;
-  }
-  pre .pun, code .pun {
-    color: #440;
-  }
-  pre .pln, code .pln {
-    color: #000;
-  }
-  pre .tag, code .tag {
-    color: #006;
-    font-weight: bold;
-  }
-  pre .atn, code .atn {
-    color: #404;
-  }
-  pre .atv, code .atv {
-    color: #060;
-  }
-}
